--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,6 +1,6 @@
 name: example
-description: "A new Flutter project."
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
+description: 'A new Flutter project.'
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
@@ -13,18 +13,18 @@ dependencies:
 
   pro_image_editor:
     path: ../
-    
+
   intl: ^0.19.0
-  cupertino_icons: ^1.0.2
-  file_picker: ^8.0.0+1
-  google_fonts: ^6.2.0
+  cupertino_icons: ^1.0.8
+  file_picker: ^8.1.2
+  google_fonts: ^6.2.1
   image: ^4.2.0
-  firebase_core: ^3.3.0
-  firebase_storage: ^12.1.3
-  supabase_flutter: ^2.5.3
-  image_picker: ^1.1.1
-  mime: ^1.0.5
-  url_launcher: ^6.2.6
+  firebase_core: ^3.5.0
+  firebase_storage: ^12.3.1
+  supabase_flutter: ^2.6.0
+  image_picker: ^1.1.2
+  mime: ^1.0.6
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
@@ -32,8 +32,8 @@ dev_dependencies:
 
   flutter_lints: ^4.0.0
   import_sorter: ^4.6.0
-  
-dependency_overrides: 
+
+dependency_overrides:
   # Fix conflict between firebase and web package
   web: ^1.0.0
 
