--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,10 @@
 name: pro_image_editor
-description: "A Flutter image editor: Seamlessly enhance your images with user-friendly editing features."
+description: 'A Flutter image editor: Seamlessly enhance your images with user-friendly editing features.'
 version: 5.3.0
 homepage: https://github.com/hm21/pro_image_editor/
 repository: https://github.com/hm21/pro_image_editor/
 issue_tracker: https://github.com/hm21/pro_image_editor/issues/
 documentation: https://github.com/hm21/pro_image_editor/
-
 
 topics:
   - image-editor
@@ -15,11 +14,11 @@ topics:
   - editor
 
 screenshots:
-  - description: "Showcase from the image editor with the frosted-glass design"
+  - description: 'Showcase from the image editor with the frosted-glass design'
     path: assets/showcase-frosted-glass.jpg
-  - description: "Showcase from the image editor with the Whatsapp design"
+  - description: 'Showcase from the image editor with the Whatsapp design'
     path: assets/showcase-whatsapp.jpg
-  - description: "Showcase from the image editor with simple design"
+  - description: 'Showcase from the image editor with simple design'
     path: assets/showcase.jpg
 
 platforms:
@@ -32,7 +31,7 @@ platforms:
 
 environment:
   sdk: '>=3.2.2 <4.0.0'
-  flutter: ">=1.17.0"
+  flutter: '>=1.17.0'
 
 dependencies:
   flutter:
@@ -41,18 +40,18 @@ dependencies:
   emoji_picker_flutter: ^3.0.0
   http: ^1.2.2
   image: ^4.2.0
-  vibration: ^2.0.0
+  # vibration: ^2.0.0
   mime: ^1.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  build_runner: ^2.4.11
+  build_runner: ^2.4.12
   flutter_lints: ^4.0.0
   import_sorter: ^4.6.0
   mockito: ^5.4.4
-  network_image_mock: ^2.0.0
+  network_image_mock: ^2.1.1
 
 flutter:
   assets:
@@ -60,6 +59,6 @@ flutter:
     - lib/web/web_worker.dart.js.deps
     - lib/web/web_worker.dart.js.map
   fonts:
-   - family: ProImageEditorIcons
-     fonts:
-      - asset: lib/fonts/ProImageEditorIcons.ttf
+    - family: ProImageEditorIcons
+      fonts:
+        - asset: lib/fonts/ProImageEditorIcons.ttf
